added text field

--- a/assets/index.html
+++ b/assets/index.html
@@ -67,6 +67,9 @@
 				</div>
 			</div>
 
+      <h3>Text Field</h3>
+      <input id="tf" size="40" type="text"/>
+
 			<h3>Buttons</h3>
 
       <div class="row">
